--- a/client/src/components/modal.css
+++ b/client/src/components/modal.css
@@ -1,3 +1,5 @@
+/* Modal styled inside Modal.js
+
 .wrapper {
 	position: fixed;
 	top: 0;
@@ -41,3 +43,5 @@
 .display-none {
 	display: none;
 }
+
+*/
